# mcp-motor-current-signature-analysis

./: .gitignore  .zenodo.json  CITATION.cff  Dockerfile  README.md  USAGE_GUIDE.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
src/mcp_server_mcsa/: __init__.py  __main__.py  server.py
src/mcp_server_mcsa/analysis/: __init__.py  bearing.py  envelope.py  fault_detection.py  file_io.py  motor.py  preprocessing.py  spectral.py  test_signal.py  timefreq.py
tests/: conftest.py  test_bearing.py  test_envelope_timefreq.py  test_fault_detection.py  test_file_io.py  test_motor.py  test_preprocessing.py  test_signal_gen.py  test_spectral.py
